# connector-kerberos

./: .gitlab-ci.yml  .travis.yml  AUTHORS  CONTRIBUTORS  LICENSE  README.md  pom.xml
jni/: CMakeLists.txt  Makefile  cz_zcu_KerberosConnector.h  cz_zcu_connectors_kerberos_KerberosConnector.h  java_access.c  java_access.h  kadm5_fake.c  kerberos.c  kerberos.h  krbconn_test.c  parse_test.c
jni/cmake/: EnableCompilerFlag.cmake  FindKRB5.cmake  ParseVersion.cmake
samples/: default.properties  kerberos.xml
src/main/assembly/: connector.xml
src/main/docbkx/: chap-install-kerberos-connector.xml  index.xml  preface.xml
src/main/java/cz/zcu/: GuardedStringAccessor.java  KerberosAdminApp.java  KerberosConfiguration.java  KerberosConnector.java  KerberosFilterTranslator.java  KerberosFlags.java  KerberosPrincipal.java  KerberosSearchResults.java  PrintResultsHandler.java  package-info.java
src/main/java/cz/zcu/connectors/kerberos/: GuardedStringAccessor.java  KerberosConfiguration.java  KerberosConnector.java  KerberosFilterTranslator.java  KerberosFlags.java  KerberosPrincipal.java  KerberosSearchResults.java  package-info.java
src/main/java/cz/zcu/connectors/kerberos/examples/: ExampleThread.java  KerberosAdminApp.java  PrintResultsHandler.java
src/main/java/cz/zcu/connectors/kerberos/exceptions/: KerberosException.java
src/main/java/cz/zcu/examples/: ExampleThread.java  KerberosAdminApp.java  PrintResultsHandler.java
src/main/java/cz/zcu/exceptions/: KerberosException.java
src/main/native/: CMakeLists.txt  Makefile  cz_zcu_KerberosConnector.h  java_access.c  java_access.h  kerberos.c  kerberos.h  krbconn_test.c
src/main/resources/cz/zcu/: Messages.properties
src/site/: site.xml
src/site/xhtml-custom/: docs.xhtml.vm  index.xhtml.vm
src/test/config/cz.zcu.KerberosConnector/config/: config.groovy
src/test/java/cz/zcu/: KerberosConnectorBadPasswordTests.java  KerberosConnectorTests.java
src/test/java/cz/zcu/connectors/kerberos/: KerberosConnectorBadPasswordTests.java  KerberosConnectorTests.java
src/test/resources/: data.csv  kdc-cleanup.sh  kdc-import.sh
src/test/resources/cz.zcu.KerberosConnector/config/: config.groovy
