cmake_minimum_required(VERSION 3.1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
project(kerberos-connector)
add_library(kerberos-connector SHARED java_access.c kerberos.c)
add_executable(krbconn_test krbconn_test.c)

set_property(GLOBAL PROPERTY C_STANDARD 99)
add_definitions(-D_GNU_SOURCE)

find_package(JNI)
if(NOT JNI_FOUND)
	message(FATAL_ERROR "JNI not found")
endif()
find_package(KRB5 REQUIRED kadm-client)
if(NOT KRB5_FOUND)
	message(FATAL_ERROR "Kerberos 5 not found")
endif()
if(KRB5_VERSION VERSION_LESS "1.15")
	message(FATAL_ERROR "Kerberos 5 version <1.15 detected where libkadm5 is not thread safe")
endif()

link_directories(${kerberos-connector_BINARY_DIR})
target_include_directories(kerberos-connector PRIVATE ${KRB5_INCLUDE_DIRS} ${JNI_INCLUDE_DIRS})
target_link_libraries(kerberos-connector ${KRB5_LIBRARIES} ${JNI_LIBRARIES})
target_link_libraries(krbconn_test kerberos-connector)

install(TARGETS kerberos-connector krbconn_test
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib)

set(CPACK_GENERATOR "DEB;RPM")
set(CPACK_PACKAGE_NAME "kerberos-connector")
set(CPACK_PACKAGE_VERSION "1.5.0")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "5")
set(CPACK_PACKAGE_VERSION_PATCH "0")
if(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^i.86")
	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "i386")
endif()
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "libkerberos-connector is JNI library providing access kerberos administration (kadm)")
set(CPACK_PACKAGE_FILE_NAME "lib${CPACK_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/../../../LICENSE")
#set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/../../../README")
#set(CPACK_RESOURCE_FILE_WELCOME "${CMAKE_SOURCE_DIR}/../../../WELCOME")
set(CPACK_PACKAGE_CONTACT "Milan Ševčík <majlen@civ.zcu.cz>")
set(CPACK_SOURCE_GENERATOR "TXZ;TGZ;TBZ2")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")
set(CPACK_SOURCE_IGNORE_FILES "/build/")
#set(CPACK_STRIP_FILES "krbconn_test")
set(CPACK_DEBIAN_PACKAGE_SECTION "java")
set(CPACK_DEBIAN_COMPRESSION_TYPE "xz")
#set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "")
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
include(CPack)
